# agentbench

./: .gitignore  README.md  action.yml  brand.md  demo-script.md  pyproject.toml  requirements.txt  vercel.json
.github/workflows/: example.yml
agentbench_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
api/: index.py
backend/: judge.py  main.py  mesh_client.py  runner.py  storage.py
cli/: agentbench.py
frontend/: app.html  index.html  report.html
suites/: brand-voice.yaml  coding-assistant.yaml  content-moderator.yaml  customer-support.yaml  healthcare-triage.yaml  hr-policy.yaml  sales-assistant.yaml
