[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agentbench-cli"
version = "1.0.0"
description = "CI/CD for AI prompts and agents. Behavior tests across 500+ models via MeshAPI."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Himanshu Jha" }]
keywords = ["llm", "testing", "ci", "prompts", "meshapi", "evals"]
# The CLI itself is stdlib-only; these cover the server when Vercel installs
# from pyproject instead of requirements.txt.
dependencies = ["fastapi>=0.111", "httpx>=0.27", "pyyaml>=6.0"]

[project.urls]
Homepage = "https://agentbench-three.vercel.app"
Repository = "https://github.com/himanshu748/agentbench"

[project.scripts]
agentbench = "cli.agentbench:main"

[tool.setuptools]
packages = ["cli"]
